# aike

./: .gitignore  .hgignore  .travis.yml  CMakeLists.txt  Makefile  README.md  TODO.md  todo.txt
bootstrap/: bootstrap.cpp  compiler.cpp  compiler.hpp  dump.cpp  dump.hpp  lexer.cpp  lexer.hpp  llvmaike.cpp  llvmaike.hpp  location.hpp  match.cpp  match.h  optimizer.cpp  optimizer.hpp  output.cpp  output.hpp  parser.cpp  parser.hpp  type.cpp  type.hpp  typecheck.cpp  typecheck.hpp
compiler/: array.aike  array.hpp  assert.aike  ast.aike  ast.hpp  char.aike  codegen.cpp  codegen.hpp  common.cpp  common.hpp  compiler.cpp  debuginfo.cpp  debuginfo.hpp  dump.aike  dump.cpp  dump.hpp  dynarray.aike  io.aike  lexer.aike  lexer.cpp  lexer.hpp  location.aike  location.hpp  main.aike  mangle.cpp  mangle.hpp  match.aike  modules.cpp  modules.hpp  optimize.cpp  optimize.hpp  option.aike  output.aike  output.cpp  output.hpp  parse.cpp  parse.hpp  parser.aike  ref.aike  resolve.aike  (+23 more)
compiler-rt/: GCDAProfiling.c
gjduckgc/: gc.c
llvmaike/: llvmaike.cpp  llvmaike.def  llvmaike.hpp
runtime/: GCDAProfiling.c  backtrace.hpp  backtrace_mac.cpp  backtrace_unix.cpp  common.cpp  common.h  common.hpp  context.hpp  context_amd64.s  gc.cpp  gc.hpp  init.cpp  io.cpp  memory.cpp  memory.hpp  scheduler.cpp  scheduler.hpp  signal.hpp  signal_unix.cpp  stack.hpp  stack_unix.cpp  typeinfo.hpp  types.hpp
tests/: array-1.aike  array-2.aike  array-3.aike  array-4.aike  array-5.aike  array-6.aike  array-7.aike  array-8.aike  array-map.aike  boolean-1.aike  boolean-2.aike  boolean-3.aike  boolean-4.aike  boolean-6.aike  complex-1.aike  equality-2.aike  equality-3.aike  extern-1.aike  extern-2.aike  extern-3.aike  for-in-array-1.aike  for-in-array-2.aike  for-in-array-3-err.aike  for-in-array-4.aike  for-in-array-5.aike  for-in-range-1.aike  for-in-range-2.aike  for-in-range-3.aike  generic-1.aike  generic-10.aike  generic-11.aike  generic-12.aike  generic-13.aike  generic-14.aike  generic-15.aike  generic-16.aike  (+194 more)
(+51 files in other folders)
